@@ -10,6 +10,7 @@
 - code analysis fixes part 1.
 - fix not bind mounting local filesystem.
 - add "dir" map-type.
+- fix wait for master source mutex.
 
 28/06/2011 autofs-5.0.6
 -----------------------
